<resources>

    <string name="app_name">WorkoutV2</string>

    <!--Shared Preferences -->
    <string name="preference_file_key">com.example.jmo.workoutv2.PREFERENCE_FILE_KEY</string>
    <!-- Screen Titles -->
    <string name="title_ProgramCreator">Program Creator</string>
    <string name="title_ProgramManager">Program Manager</string>


    <string name="menu_MyPrograms">My Programs</string>
    <string name="menu_Placeholder">Placeholder</string>
    <string name="menu_Home">Home</string>

    <!-- My Programs Fragment -->
    <string name="myPrograms_Create">Create a Program</string>
    <string name="myPrograms_Manage">Manage Your Programs</string>
    <string name="myPrograms_alertFound">No Programs Found</string>
    <string name="myPrograms_alertCreate">You must Create a Program</string>

    <!-- Program Creator Selection -->
    <string name="menu_programSelector">Select a Program</string>
    <string name="templateProgram_bodybuilding">Bodybuilding</string>
    <string name="templateProgram_powerlifting">Powerlifting</string>
    <string name="templateProgram_oly">Olympic Weightlifting</string>
    <string name="templateProgram_custom">Custom Workout Plan</string>

    <string name="description_custom">Create a fully customizable workout plan.</string>
    <string name="description_bodybuilding">Bodybuilding utilizes intensive physical exercise and weight training to build the most optimal physique. This routine
    is perfect if your goal is to build larger and more define muscles. </string>
    <string name="description_powerlifting">Powerlifting is about gaining strength in the big three compound lifts; Squat, Bench Press and Deadlift. This routine is great if you\'re looking to improve
    overall strength and numbers in the three lifts.</string>

    <!-- Program Creator Menu -->
    <string name="week_select">Week </string>
    <string name="programCreatorMenu_setTitle">Change Title</string>
    <string name="programCreatorMenu_help">Help</string>
    <string name="programCreatorMenu_exit">Exit</string>

    <string name="programEditor_addExercise">New Exercise</string>

    <!-- Simple String Preset -->
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="choice_cancel">Cancel</string>
    <string name="exitWithoutSave">Exit Without Saving</string>
    <string name="exitWithSave">Save &amp; Exit</string>

    <!-- Manage Program On Click Item -->
    <string name="programManagerMenu_Edit">Edit Program</string>
    <string name="programManagerMenu_Delete">Delete Program</string>

    <!-- Remove Exercise Button Click Menu -->
    <string name="removeExercise_popup_title">Remove Exercise?</string>

    <!-- Day Bar Expand Button Click Menu -->
    <string name="dayExpand_menu_setTitle">Change Title</string>
    <string name="dayExpand_menu_removeAll">Remove All Exercises</string>

    <!-- Exercise Data Long Click Menu -->
    <string name="exerciseDataLong_menu_remove">Remove Exercise</string>

    <!--Week Selection Long Click Menu -->
    <string name="weekSelectLong_menu_edit">Edit Name</string>
    <string name="weekSelectLong_menu_remove">Remove Week</string>

    <!-- Popup Messages -->
    <string name="popupMessage_exit">Would you like to exit?</string>
    <string name="popupMessage_removeWeek">Remove Week?</string>

    <!-- Exercise View/Edit Screen -->
    <string name="exerciseInfo_title">- Exercise Information -</string>
    <string name="exerciseInfo_additional">- Additional Information -</string>
    <string name="exerciseInfo_numReps">Number of Repetitions (REPS)</string>
    <string name="exerciseInfo_numSets">Number of Sets</string>
    <string name="exerciseInfo_weight">Amount of Weight</string>
    <string-array name="weightType_array">
        <item>lb</item>
        <item>kg</item>
        <item>RPE</item>
        <item>% of Max</item>
    </string-array>
    <string name="exerciseInfoPopup_dialogTitle">Edit Exercise Title</string>
    <string name="exerciseInfoPopup_title">Exercise Title</string>
    <string name="exerciseInfoPopup_subtitle">Target Muscles</string>

    <!-- Exercise WeightTypes -->
    <string name="exerciseWeightType_lb">lb</string>
    <string name="exerciseWeightType_kg">kg</string>
    <string name="exerciseWeightType_RPE">RPE</string>
    <string name="exerciseWeightType_max">% of Max</string>

    <!-- Exercise Select -->
    <string-array name="exerciseTypeItems">
        <item>Any</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Shoulders</item>
        <item>Legs</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Forearms</item>
        <item>Core</item>
        <item>Cardio</item>
    </string-array>

    <string name="exerciseSelect_custom">Custom</string>
    <string name="exerciseSelect_chest">Chest</string>
    <string name="exerciseSelect_back">Back</string>
    <string name="exerciseSelect_shoulders">Shoulders</string>
    <string name="exerciseSelect_legs">Legs</string>
    <string name="exerciseSelect_arms">Arms</string>
    <string name="exerciseSelect_core">Core</string>
    <string name="exerciseSelect_cardio">Cardio</string>
    <string name="exerciseSelect_search">Search</string>
</resources>
