<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg1_exerciseEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageButton
        android:id="@+id/imgBtn_exerciseInfo_editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorTransparent"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_pencil" />

    <TextView
        android:id="@+id/txt_exerciseInfo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="Exercise Name"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtn_exerciseInfo_editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgBtn_exerciseInfo_editTitle"
        app:layout_constraintTop_toTopOf="@+id/imgBtn_exerciseInfo_editTitle" />

    <TextView
        android:id="@+id/txt_exerciseInfo_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:text="Target Muscle"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo_title" />

    <TextView
        android:id="@+id/txt_exerciseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exerciseInfo_title"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txt_exerciseInfo_numSets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg1_exerciseEdit" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/txt_exerciseInfo_numReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseInfo_numReps"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_exerciseInfo_numReps"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/editText_exerciseInfo_numSets"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_exerciseInfo_numSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="3"
        android:gravity="center"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_exerciseInfo_numReps"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo_numSets"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_exerciseInfo_numReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="3"
        android:gravity="center"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_exerciseInfo_weight"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo_numReps"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_exerciseInfo_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_bg"
        android:ems="6"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/img_exerciseInfo_sep"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo_weight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_exerciseInfo_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="?"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_exerciseInfo_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText_exerciseInfo_weight"
        app:layout_constraintTop_toTopOf="@+id/editText_exerciseInfo_weight" />

    <TextView
        android:id="@+id/txt_exerciseInfo_numSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseInfo_numSets"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_exerciseInfo_numSets"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_exerciseInfo_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseInfo_weight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_exerciseInfo_weight"
        app:layout_constraintEnd_toEndOf="@+id/txt_exerciseInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_exerciseInfo"
        app:layout_constraintTop_toBottomOf="@+id/editText_exerciseInfo_numReps"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_exerciseInfo_weightType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editText_exerciseInfo_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_exerciseInfo_lb"
        app:layout_constraintTop_toTopOf="@+id/editText_exerciseInfo_weight" />

    <ImageView
        android:id="@+id/img_exerciseInfo_sep"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_exerciseInfo_additional"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/exerciseInfo_additional"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_exerciseInfo_additional"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_exerciseInfo_additional" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_exerciseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:srcCompat="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>